test/files/parser/errors/call-repeat-input.organic
// Call input specified twice
// 4 ~ 17 ~ Input "volume" specified more than once for function "sine".

sine(volume: 1, volume: 1)
